--- a/agent/conf/motion.conf
+++ b/agent/conf/motion.conf
@@ -8,7 +8,7 @@
 ############################################################
 
 # Start in daemon (background) mode and release terminal (default: off)
-daemon on
+daemon off
 
 # File to store the process ID, also called pid file. (default: not defined)
 process_id_file /var/run/motion/motion.pid
@@ -97,14 +97,14 @@ power_line_frequency -1
 rotate 0
 
 # Image width (pixels). Valid range: Camera dependent, default: 352
-width 640
+width 512
 
 # Image height (pixels). Valid range: Camera dependent, default: 288
-height 480
+height 384
 
 # Maximum number of frames to be captured per second.
 # Valid range: 2-100. Default: 100 (almost no limit).
-framerate 24
+framerate 15
 
 # Minimum time in seconds between capturing picture frames from the camera.
 # Default: 0 = disabled - the capture rate is given by the camera framerate.
@@ -239,7 +239,7 @@ minimum_motion_frames 1
 # Recommended range: 0 to 5 (default: 0)
 # Do not use large values! Large values will cause Motion to skip video frames and
 # cause unsmooth movies. To smooth movies use larger values of post_capture instead.
-pre_capture 0
+pre_capture 3
 
 # Number of frames to capture after motion is no longer detected (default: 0)
 post_capture 0
@@ -270,7 +270,7 @@ emulate_motion off
 # Picture with most motion of an event is saved when set to 'best'.
 # Picture with motion nearest center of picture is saved when set to 'center'.
 # Can be used as preview shot for the corresponding movie.
-output_pictures off
+output_pictures best
 
 # Output pictures with only the pixels moving object (ghost images) (default: off)
 output_debug_pictures off
@@ -498,7 +498,7 @@ stream_quality 50
 stream_motion on
 
 # Maximum framerate for stream streams (default: 1)
-stream_maxrate 24
+stream_maxrate 15
 
 # Restrict stream connections to localhost only (default: on)
 stream_localhost off
@@ -531,7 +531,7 @@ stream_auth_method 1
 ############################################################
 
 # TCP/IP port for the http server to listen on (default: 0 = disabled)
-webcontrol_port 8080
+webcontrol_port 0
 
 # Restrict control connections to localhost only (default: on)
 webcontrol_localhost off
