--- a/agent/conf/motion.conf
+++ b/agent/conf/motion.conf
@@ -516,7 +516,7 @@ stream_auth_method 1
 
 # Authentication for the stream. Syntax username:password
 # Default: not defined (Disabled)
-; stream_authentication test:test
+stream_authentication raccoon:cat
 
 # Percentage to scale the stream image for preview
 # Default: 25
