--- a/agent/conf/motion.conf
+++ b/agent/conf/motion.conf
@@ -239,10 +239,10 @@ minimum_motion_frames 1
 # Recommended range: 0 to 5 (default: 0)
 # Do not use large values! Large values will cause Motion to skip video frames and
 # cause unsmooth movies. To smooth movies use larger values of post_capture instead.
-pre_capture 3
+pre_capture 0
 
 # Number of frames to capture after motion is no longer detected (default: 0)
-post_capture 0
+post_capture 10
 
 # Event Gap is the seconds of no motion detection that triggers the end of an event.
 # An event is defined as a series of motion images taken within a short timeframe.
@@ -470,7 +470,7 @@ picture_filename %v-%Y%m%d%H%M%S-%q
 # File path for motion triggered ffmpeg films (movies) relative to target_dir
 # Default: %v-%Y%m%d%H%M%S
 # File extensions(.mpg .avi) are automatically added so do not include them
-movie_filename %v-%Y%m%d%H%M%S
+movie_filename %Y%m%d%H%M%S(%v)
 
 # File path for timelapse movies relative to target_dir
 # Default: %Y%m%d-timelapse
