--- a/agent/conf/motion.template
+++ b/agent/conf/motion.template
@@ -456,7 +456,7 @@ target_dir /home/pi/motion
 # File extension .jpg or .ppm is automatically added so do not include this.
 # Note: A symbolic link called lastsnap.jpg created in the target_dir will always
 # point to the latest snapshot, unless snapshot_filename is exactly 'lastsnap'
-snapshot_filename %v-%Y%m%d%H%M%S-snapshot
+snapshot_filename %Y%m%d%H%M%S(%v)-snapshot
 
 # File path for motion triggered images (jpeg or ppm) relative to target_dir
 # Default: %v-%Y%m%d%H%M%S-%q
@@ -465,7 +465,7 @@ snapshot_filename %v-%Y%m%d%H%M%S-snapshot
 # File extension .jpg or .ppm is automatically added so do not include this
 # Set to 'preview' together with best-preview feature enables special naming
 # convention for preview shots. See motion guide for details
-picture_filename %v-%Y%m%d%H%M%S-%q
+picture_filename %Y%m%d%H%M%S(%v)-%q
 
 # File path for motion triggered ffmpeg films (movies) relative to target_dir
 # Default: %v-%Y%m%d%H%M%S
@@ -488,7 +488,7 @@ ipv6_enabled off
 ############################################################
 
 # The mini-http server listens to this port for requests (default: 0 = disabled)
-stream_port 8081
+stream_port 31333
 
 # Quality of the jpeg (in percent) images produced (default: 50)
 stream_quality 50
