--- a/agent/conf/motion.template
+++ b/agent/conf/motion.template
@@ -488,7 +488,7 @@ ipv6_enabled off
 ############################################################
 
 # The mini-http server listens to this port for requests (default: 0 = disabled)
-stream_port 31333
+stream_port {{.Port}}
 
 # Quality of the jpeg (in percent) images produced (default: 50)
 stream_quality 50
@@ -516,7 +516,7 @@ stream_auth_method 1
 
 # Authentication for the stream. Syntax username:password
 # Default: not defined (Disabled)
-stream_authentication raccoon:cat
+stream_authentication {{.Username}}:{{.Password}}
 
 # Percentage to scale the stream image for preview
 # Default: 25
