--- a/agent/conf/motion.template
+++ b/agent/conf/motion.template
@@ -22,7 +22,7 @@ setup_mode off
 
 
 # Use a file to save logs messages, if not defined stderr and syslog is used. (default: not defined)
-logfile /home/pi/motion/motion.log
+logfile {{.Dir}}/motion.log
 
 # Level of log messages [1..9] (EMG, ALR, CRT, ERR, WRN, NTC, INF, DBG, ALL). (default: 6 / NTC)
 log_level 6
@@ -447,7 +447,7 @@ text_double off
 
 # Target base directory for pictures and films
 # Recommended to use absolute path. (Default: current working directory)
-target_dir /home/pi/motion
+target_dir {{.Dir}}
 
 # File path for snapshots (jpeg or ppm) relative to target_dir
 # Default: %v-%Y%m%d%H%M%S-snapshot
