--- a/agent/.conf/motion.template
+++ b/agent/.conf/motion.template
@@ -333,7 +333,7 @@ ffmpeg_variable_bitrate 0
 # mp4 - MPEG-4 Part 14 H264 encoding
 # mkv - Matroska H264 encoding
 # hevc - H.265 / HEVC (High Efficiency Video Coding)
-ffmpeg_video_codec mpeg4
+ffmpeg_video_codec mp4
 
 # When creating videos, should frames be duplicated in order 
 # to keep up with the requested frames per second
