Add autogenerated schemas for agent module

--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.pburakov.homehub</groupId>
@@ -13,6 +13,7 @@
   <modules>
     <module>schema</module>
     <module>server</module>
+    <module>agent</module>
   </modules>
 
   <properties>
@@ -20,7 +21,7 @@
 
     <!--versions-->
     <jdk.version>11</jdk.version>
-    <protobuf.version>3.8.0</protobuf.version>
+    <protobuf.version>3.7.1</protobuf.version>
     <grpc.version>1.21.0</grpc.version>
   </properties>
 
