--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <jdk.version>11</jdk.version>
     <protobuf.version>3.7.1</protobuf.version>
     <grpc.version>1.21.0</grpc.version>
+    <junit.version>5.5.0</junit.version>
   </properties>
 
   <dependencyManagement>
@@ -74,6 +75,16 @@
         <groupId>javax.annotation</groupId>
         <artifactId>javax.annotation-api</artifactId>
         <version>1.3.2</version>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.5.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.5.0</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
