--- a/schema/pom.xml
+++ b/schema/pom.xml
@@ -42,11 +42,11 @@
         <extensions>true</extensions>
         <configuration>
           <protocArtifact>
-            com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}
+            com.google.protobuf:protoc:${protobuf.version}:exe:${protobuf.build}
           </protocArtifact>
           <pluginId>grpc-java</pluginId>
           <pluginArtifact>
-            io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
+            io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${protobuf.build}
           </pluginArtifact>
         </configuration>
         <executions>
